# React-Fast-Template

./: .gitignore  Makefile  README.md  cdk-outputs-dev.json  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile.lambda  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: items.py  my_lists.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: item.py  my_list.py
docs/: AWS_GUI_GUIDE.md  SETUP_GUIDE.md
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts.map  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: MapView.tsx  MyListPanel.tsx  SearchBar.tsx
frontend/src/contexts/: MyListContext.tsx
frontend/src/hooks/: useLocalStorage.ts
frontend/src/pages/: MapPage.tsx
frontend/src/services/: myListApi.ts
frontend/src/types/: maps.ts
infra/: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INFRASTRUCTURE_ANALYSIS_REPORT.md  cdk.context.json  cdk.json  package-lock.json  package.json
infra/lib/: backend-stack.ts  database-stack.ts  frontend-stack.ts  network-stack.ts
scripts/: deploy.fish  deploy.sh  init-db.sql
